<resources>
    <string name="app_name">BobcatParkingApp</string>
    <string name="lake1">Lake Lot One</string>
    <string name="lake2">Lake Lot Two</string>
    <string name="evo">Evolution Lot</string>
    <string name="ecec">Early Childhood Education Center</string>
    <string name="library1">Library Lot One</string>
    <string name="library2">Library Lot Two</string>
    <string name="legrand">Le Grand Lot</string>
    <string name="bowl1">North Bowl Lot One</string>
    <string name="bowl2">North Bowl Lot Two</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
</resources>
