<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amandaabalos.bobcatparkingapp.MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:src="@mipmap/upperlots"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/library1_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha=".75"
        android:textSize="10sp"
        android:background="@drawable/btn_round_empty"
        android:padding="5dp"
        android:text="@string/library1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/library2_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha=".75"
        android:textSize="10sp"
        android:background="@drawable/btn_round_empty"
        android:padding="5dp"
        android:text="@string/library2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Button
        android:id="@+id/legrand_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha=".75"
        android:textSize="10sp"
        android:background="@drawable/btn_round_empty"
        android:padding="5dp"
        android:text="@string/legrand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/bowl1_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha=".75"
        android:textSize="10sp"
        android:background="@drawable/btn_round_empty"
        android:padding="5dp"
        android:text="@string/bowl1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/bowl2_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:alpha=".75"
        android:textSize="10sp"
        android:background="@drawable/btn_round_empty"
        android:padding="5dp"
        android:text="@string/bowl2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/movedown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Southern Lots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
